@@ -1,5 +1,6 @@
 package pl.printo3d.onedcutter.cutter1d;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -15,7 +16,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import pl.printo3d.onedcutter.cutter1d.userlogin.services.UserService;
 import pl.printo3d.onedcutter.cutter1d.userlogin.utility.JWTFilter;
 
-//@CrossOrigin(origins = "http://localhost:4200")
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig extends WebSecurityConfigurerAdapter {
@@ -42,11 +42,11 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
   protected void configure(HttpSecurity http) throws Exception {
 
     CorsConfiguration corsConfiguration = new CorsConfiguration();
-    corsConfiguration.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type"));
-    corsConfiguration.setAllowedOrigins(List.of("http://localhost:4200"));
-    corsConfiguration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PUT","OPTIONS","PATCH", "DELETE"));
+    corsConfiguration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
+    corsConfiguration.setAllowedOrigins(Arrays.asList("http://localhost:4200"));
+    corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PUT","OPTIONS","PATCH", "DELETE"));
     corsConfiguration.setAllowCredentials(true);
-    corsConfiguration.setExposedHeaders(List.of("Authorization"));
+    corsConfiguration.setExposedHeaders(Arrays.asList("Authorization"));
 
 
     http.authorizeRequests().antMatchers("/login", "/img/**", "/css/**").permitAll()
